--- a/reset.css
+++ b/reset.css
@@ -54,3 +54,8 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+* { 
+	border-color: currentcolor; 
+	border-style: solid; 
+	border-width: 0;
+}
