--- a/reset.css
+++ b/reset.css
@@ -16,9 +16,14 @@ article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup, 
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
-	border: 0; margin: 0; padding: 0;
+	margin: 0; padding: 0;
 	font: inherit; font-size: 100%;
 	vertical-align: baseline;
+	border: 0;
+	border-color: currentcolor; 
+	border-style: solid; 
+	border-width: 0;
+	box-sizing: border-box;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
@@ -53,9 +58,4 @@ ol, ul {
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
-}
-* { 
-	border-color: currentcolor; 
-	border-style: solid; 
-	border-width: 0;
 }
